# stilwerk

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_PLUGIN.md  pyproject.toml  stilwerk  stilwerk.conf
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/commands/: sw_analyze.md  sw_attribute.md  sw_create.md  sw_info.md  sw_learn.md  sw_open.md  sw_transform.md
docs/: instruments.md
examples/: ai-generated.md  clive-thompson.md  corporate-memo.md  nyt-magazine.md  paul-graham.md
hooks/: ensure-cli.sh  hooks.json
profiles/: base-german.yaml  essay.yaml  technical-blog-de.yaml  technical-blog.yaml
prompts/: qualitative.md
skills/analyze/: SKILL.md
skills/attribute/: SKILL.md
skills/info/: SKILL.md
skills/learn/: SKILL.md
skills/transform/: SKILL.md
src/: __init__.py  cli.py  compare.py  extract.py  instruct.py  learn.py  profile.py  verify.py
src/analysis/: __init__.py  clustering.py  distance.py  pca.py  results.py
src/config/: __init__.py  loader.py  schema.py
src/corpus/: __init__.py  loader.py  tokenizer.py
src/features/: __init__.py  base.py  factory.py  function_words.py  lexical.py  punctuation.py
tools/: config.sh  contractions.sh  first-person.sh  metrics.sh  sentence-stats.sh  transitions.sh  word-stats.sh
